# python-tutorial-jupyterlite

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
content/tutorial/tests/data/: longest_100000.txt
